manually and items

--- a/src/options.html
+++ b/src/options.html
@@ -7,6 +7,14 @@
 </head>
 <body>
   <h1>Rozvoz Specialit Rater</h1>
+
+  <!-- NEW: form to add a lunch to Liked or Disliked -->
+  <form id="add-item-form">
+    <input id="new-item-input" type="text" placeholder="Enter lunch name…" />
+    <button id="add-liked-btn" type="button">Add to Liked</button>
+    <button id="add-disliked-btn" type="button">Add to Disliked</button>
+  </form>
+
   <section id="liked-section">
     <h2>Liked lunches</h2>
     <ul id="liked-list"></ul>
