feat(lunch-rater): Add neutral rating option for lunch items

--- a/src/options.html
+++ b/src/options.html
@@ -12,6 +12,7 @@
   <form id="add-item-form">
     <input id="new-item-input" type="text" placeholder="Enter lunch name…" />
     <button id="add-liked-btn" type="button">Add to Liked</button>
+    <button id="add-neutral-btn" type="button">Add to Neutral</button>
     <button id="add-disliked-btn" type="button">Add to Disliked</button>
   </form>
 
@@ -24,6 +25,11 @@
     <h2>Disliked lunches</h2>
     <ul id="disliked-list"></ul>
     <p id="no-disliked">You haven’t disliked any lunches yet.</p>
+  </section>
+  <section id="neutral-section">
+    <h2>Neutral lunches</h2>
+    <ul id="neutral-list"></ul>
+    <p id="no-neutral">You haven't marked any lunches as neutral yet.</p>
   </section>
 
   <!-- NEW: export/import controls -->
